--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@ header > div.header > #btn_1 {
 .descrptn_1, .descrptn_2, .descrptn_3{
     display: flex;
     justify-content: space-between;
-    gap:30px;
+    row-gap:30px;
     align-items: center;
 }
 .des_txt {
@@ -45,11 +45,16 @@ header > div.header > #btn_1 {
 #title, #sub_title{
     text-align: center;
 }
-#title, h3{
-    font-size: xx-large;
-    font-weight: bold;
+.title {
+    font-size: 35px;
+    font-weight: bolder;
+    color:#0D1321;
+
+
 }
-h3{
+.title_2{
+    font-size: 28px;
+    font-weight: bold;
     color:#0d132170;
 }
 .description , .boxes{
@@ -90,7 +95,28 @@ h3{
     text-align: center;
     margin: 0px 80px;
 }
-#title_2{
-    font-size: xx-large;
-    font-weight: bold; 
+/* design of target part */
+.target {
+    margin: 151px 150px 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.lang_box{
+    display: flex;
+    justify-content:space-between;
+    height:100%;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 48px;
+    padding: 0px;
+    column-gap: 24px;
+}
+.box{
+    padding: 20px;
+    color:#0D1321;
+}
+.box > a{
+    color:#0D1321;
 }
